2000-12-22  Bernd Schmidt  <bernds@redhat.co.uk>

	* flow.c (propagate_block): Use flow_delete_insn instead of
	NOTEifying a dead ADDR_VEC.

	Fri Sep 10 11:43:07 1999  Philip Blundell <pb@futuretv.com>
	* configure.in, config/arm/linux-oldld.h,
	config/arm/linux-elf26.h, config/arm/linux-elf.h: Backport latest
	ARM GNU/Linux config from mainline.
	* configure: Regenerate.

	2000-02-08  Geoff Keating  <geoffk@cygnus.com>
	* dwarf2.h (DW_CFA_GNU_negative_offset_extended): New constant.
	* dwarf2out.c (dwarf_cfi_name): Print name of new constant.
	(reg_save): Use DW_CFA_GNU_negative_offset_extended when needed.
	(output_cfi): Handle output of DW_CFA_GNU_negative_offset_extended.
	* frame.c (execute_cfa_insn): Handle
	DW_CFA_GNU_negative_offset_extended.

	2000-03-06  Mark Mitchell  <mark@codesourcery.com>
	* function.c (free_temps_for_rtl_expr): Don't free slots
	that have been pushed into a higher level.

	1999-12-16  David S. Miller  <davem@redhat.com>
	* expr.c (emit_move_insn_1): Only emit clobbers if one of
	the outputs is a SUBREG.

	Wed Sep 22 17:35:55 1999  Michael Meissner  <meissner@cygnus.com>
	* expr.c (emit_move_insn_1): If we are copying a complex that fits
	in one word or less (complex char, complex short, or on 64 bit
	systems complex float) to/from a hard register, copy it through
	memory instead of dying in gen_{real,imag}part.  If we have a
	short complex type, prevent inlining since it allocates stack
	memory.

	Fri Dec 15 15:32:16 MET 2000  Jan Hubicka  <jh@suse.cz>
	* combine.c (cant_combine_insn_p): Get around SUBREGs when determining
	hardreg<->reg moves.

	2000-12-01  Bernd Schmidt  <bernds@redhat.co.uk>
	* combine.c (cant_combine_insn_p): Only disallow insns involving
	hard regs if they are reg-reg moves.

	2000-11-24  Bernd Schmidt  <bernds@redhat.co.uk>
	* combine.c (cant_combine_insn_p): New function.
	(try_combine): Use it.

2000-12-20  Bernd Schmidt  <bernds@redhat.co.uk>

	* version.c: Bump.
