@@ -1,5 +1,8 @@
 2000-12-22  Bernd Schmidt  <bernds@redhat.co.uk>
 
+	* calls.c (emit_call_1): Fall back to call_pop/call_value_pop if no
+	non-popping calls are available.
+
 	* flow.c (propagate_block): Use flow_delete_insn instead of
 	NOTEifying a dead ADDR_VEC.
 
